Fix Mailbox message meta alignment

--- a/src/pages/mail/mailDetailsPage/mailMessage/mailMessage.module.scss
+++ b/src/pages/mail/mailDetailsPage/mailMessage/mailMessage.module.scss
@@ -27,6 +27,10 @@
 	grid-gap: 4px;
 }
 
+//
+
+$recipientRowHeight: 20px;
+
 .recipients {
 	display: grid;
 	grid-template-columns: minmax(60px, auto) 1fr;
@@ -35,6 +39,9 @@
 }
 
 .recipientsLabel {
+	display: flex;
+	align-items: center;
+	height: $recipientRowHeight;
 	color: var(--secondary-text-color);
 }
 
@@ -49,7 +56,7 @@
 	display: flex;
 	align-items: center;
 	min-width: 0;
-	min-height: 20px;
+	height: $recipientRowHeight;
 
 	> :not(:first-child) {
 		margin-left: 4px;
@@ -64,6 +71,8 @@
 .recipientsRow:hover .recipientsButton {
 	opacity: 1;
 }
+
+//
 
 .date {
 	justify-self: end;
